[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Soul.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/RobotoSlab-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sounds/intro_voice_line.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Levels/Intro.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Levels/CinematicLevel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Levels/CinematicLevel.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Layers.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -46.0
margin_top = -16.0
margin_right = 836.0
margin_bottom = 1061.0
color = Color( 0, 0, 0, 1 )

[node name="Line1" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 110.0
margin_right = 767.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "Greetings"
align = 1

[node name="Line2" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 213.0
margin_right = 765.0
margin_bottom = 309.0
custom_colors/font_color = Color( 0.415686, 0.8, 0.839216, 1 )
custom_fonts/font = SubResource( 1 )
text = "Soul Weaver"
align = 1

[node name="Line3" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 371.0
margin_right = 767.0
margin_bottom = 467.0
custom_fonts/font = SubResource( 1 )
text = "Your job is to deliver
the soul

to the correct layer
of hell"
align = 1

[node name="Soul" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 386, 637 )

[node name="Line4" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 110.0
margin_right = 767.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "Along your path"
align = 1

[node name="Line5" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 219.0
margin_right = 767.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 1 )
text = "You will encounter
devils and demons..."
align = 1

[node name="Line6" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 432.0
margin_right = 767.0
margin_bottom = 924.0
custom_fonts/font = SubResource( 1 )
text = "They want your soul."
align = 1

[node name="Line7" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 551.0
margin_right = 764.0
margin_bottom = 746.0
custom_colors/font_color = Color( 0.811765, 0.0588235, 0.0588235, 1 )
custom_fonts/font = SubResource( 1 )
text = "DO NOT LET THEM
TAKE IT"
align = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Level" parent="." instance=ExtResource( 5 )]
visible = false
script = ExtResource( 6 )

[node name="RotateTimer" type="Timer" parent="Level"]
autostart = true

[node name="Win" type="Label" parent="."]
visible = false
margin_left = 225.0
margin_top = 920.0
margin_right = 987.0
margin_bottom = 1115.0
custom_colors/font_color = Color( 0.254902, 0.494118, 0.517647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Victory"
align = 1

[node name="Lose" type="Label" parent="."]
visible = false
margin_left = -217.0
margin_top = 920.0
margin_right = 545.0
margin_bottom = 1115.0
custom_colors/font_color = Color( 0.333333, 0.0235294, 0.0235294, 1 )
custom_fonts/font = SubResource( 1 )
text = "Defeat"
align = 1

[node name="Layers" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 281, 249 )

[connection signal="timeout" from="Level/RotateTimer" to="Level" method="_on_RotateTimer_timeout"]
